--- a/ToDoList/base/templates/base/task_list.html
+++ b/ToDoList/base/templates/base/task_list.html
@@ -10,10 +10,12 @@
     <table>
         <tr>
             <th>Item</th>
+            <th></th>
         </tr>
         {% for task in task %}
         <tr>
             <td>{{task.title}}</td>
+            <td><a href="{% url 'task' task.id %}">View</a></td>
         </tr>
         {%  empty %}
         <h3> No item in list </h3>
