--- a/ToDoList/base/templates/base/task_list.html
+++ b/ToDoList/base/templates/base/task_list.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> To do App List</h1>
+    <a href="{% url 'task-create'  %}">Add Task</a>
     <table>
         <tr>
             <th>Item</th>
