--- a/ToDoList/base/templates/base/task_list.html
+++ b/ToDoList/base/templates/base/task_list.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>first page</title>
 </head>
 <body>
+
+{% if request.user.is_authenticated %}
+    <p>{{request.user}}</p>
+    <a href=''>Logout</a>
+{% else %}
+    <a href='{% url 'login' %}'>Login</a>
+{% endif %}
+<hr>
+
     <h1> To do App List</h1>
     <a href="{% url 'task-create'  %}">Add Task</a>
     <table>
