--- a/ToDoList/base/templates/base/task_list.html
+++ b/ToDoList/base/templates/base/task_list.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first page</title>
+    <title>To_Do_List</title>
 </head>
 <body>
 
 {% if request.user.is_authenticated %}
-    <p>{{request.user}}</p>
-    <a href=''>Logout</a>
+    <p>Welcome, {{ request.user.username }}!</p>
+    <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+    </form>
 {% else %}
+    
     <a href='{% url 'login' %}'>Login</a>
 {% endif %}
 <hr>
