--- a/ToDoList/base/templates/base/task_list.html
+++ b/ToDoList/base/templates/base/task_list.html
@@ -14,29 +14,31 @@
         <button type="submit">Logout</button>
     </form>
 {% else %}
-    
-    <a href='{% url 'login' %}'>Login</a>
+    <a href="{% url 'login' %}">Login</a>
 {% endif %}
 <hr>
 
-    <h1> To do App List</h1>
-    <a href="{% url 'task-create'  %}">Add Task</a>
-    <table>
-        <tr>
-            <th>Item</th>
-            <th></th>
-        </tr>
-        {% for task in task %}
-        <tr>
-            <td>{{task.title}}</td>
-            <td><a href="{% url 'task' task.id %}">View</a></td>
-            <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-            <td><a href="{% url 'task-Delete' task.id %}">Delete</a></td>
+<h1> To do App List {{ color }}</h1>
+<a href="{% url 'task-create' %}">Add Task</a>
 
-        </tr>
-        {%  empty %}
-        <h3> No item in list </h3>
-        {% endfor %}
-    </table>
+<table>
+    <tr>
+        <th>Item</th>
+        <th>Actions</th>
+    </tr>
+    {% for task in tasks %}
+    <tr>
+        <td>{{ task.title }}</td>
+        <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+    </tr>
+    {% empty %}
+    <tr>
+        <td colspan="2"><h3>No items in list</h3></td>
+    </tr>
+    {% endfor %}
+</table>
+
 </body>
 </html>
