--- a/ToDoList/base/templates/base/login.html
+++ b/ToDoList/base/templates/base/login.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-</head>
-<body>
+{% extends "base/main.html" %}
+{% block content %}
+
     <h1> Login </h1>
     <form method="POST">
         {% csrf_token %}
@@ -14,5 +9,6 @@
     </form>
     
     <p>Dont have an account? <a href="{% url 'register' %}">Register</a></p>
-</body>
-</html>
+
+
+{% endblock content %}
