--- a/ToDoList/base/templates/base/task_confirm_delete.html
+++ b/ToDoList/base/templates/base/task_confirm_delete.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete</title>
-</head>
-<body>
-    <a href="{% url 'tasks' %}">Go Back</a>
+{% extends 'base/main.html' %}
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Go Back</a>
+</div>
+
+<div class="card-body">
     <form method="POST">
         {% csrf_token %}
-        {{form.as_p}}
-        <p>Are you sure you want to delete this task? "{{task}}"</p>
-        <input  type="submit" value="delete"/>
+        <p>Are your sure you want to delete this task? <b>"{{task}}"</b> </p>
+        <input class="button" type="submit" value="Delete" />
     </form>
-    
-</body>
-</html>
+</div>
+
+
+
+{% endblock content %}
