--- a/ToDoList/base/templates/base/task_form.html
+++ b/ToDoList/base/templates/base/task_form.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Form</title>
-</head>
-<body>
-    <h1> Task Form</h1>
-    <a href="{% url 'tasks' %}">GO back</a>
+{% extends 'base/main.html' %}
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+</div>
+
+
+<div class="card-body">
     <form method="POST" action="">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="submit">
+        <input class="button" type="submit" value="Submit">
     </form>
-    
-</body>
-</html>
+</div>
+
+
+{% endblock content %}
